--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Norse-Bold;
+  src: url(./Norse-Bold.otf);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -15,15 +20,16 @@ html {
 
 .picture {
   flex-shrink: 0;
-  width: max(40vw, 300px);
+  width: max(40vw, 30rem);
   height: 100vh;
   background-image: url(./pandu-ior-hckbnUpcm6E-unsplash.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .picture-author {
@@ -40,4 +46,25 @@ html {
 .link:hover,
 .link:active {
   text-decoration: none;
+}
+
+.odin-logo {
+  width: 100%;
+  height: 10rem;
+  margin-block-start: 30vh;
+  background-color: rgb(20, 26, 27, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.odin-logo img {
+  height: 100%;
+}
+
+.odin-logo p {
+  font-family: Norse-Bold;
+  color: white;
+  text-transform: uppercase;
+  font-size: 7.2rem;
 }
