--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background-color: #f7f7f7;
+  font-family: sans-serif;
+}
+
 .main-container {
   display: flex;
   font-size: 1.6rem;
@@ -51,7 +56,7 @@ html {
 .odin-logo {
   width: 100%;
   height: 10rem;
-  margin-block-start: 30vh;
+  margin-block-start: 20vh;
   background-color: rgb(20, 26, 27, 0.3);
   display: flex;
   align-items: center;
@@ -66,5 +71,44 @@ html {
   font-family: Norse-Bold;
   color: white;
   text-transform: uppercase;
-  font-size: 7.2rem;
+  font-size: calc(7.2rem + 3vw);
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.text-introduction {
+  height: calc(10rem + 20vh);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.text-introduction p {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin: 2rem 5rem;
+}
+
+.text-introduction p:first-of-type {
+  margin-top: 7rem;
+}
+
+.signup-form {
+  background-color: white;
+  height: 33vh;
+  padding: 2rem 5rem;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-under-form {
+  margin: 2rem 5rem;
 }
